<resources>
    <string name="app_name">Corona Calculator</string>
    <string name="pressure_hint">Pressure (cm Hg)</string>
    <string name="temperature_hint">Temperature (°C)</string>
    <string name="frequency">Frequency (Hz)</string>
    <string name="operating_voltage">Operating Voltage (kV)</string>
    <string name="radius_cm">Radius (cm)</string>
    <string name="fair_weather">Fair Weather</string>
    <string name="storm_weather">Storm Weather</string>
    <string name="no_value" />
    <string name="visual_disruptive_voltage">Visual Disruptive Voltage</string>
    <string name="maximum_radius_loss">Maximum Radius Loss</string>
    <string name="ac_corona_loss">AC Corona Loss</string>
    <string name="mean_height">Mean Height (m)</string>
    <string name="pole_spacing">Pole Spacing (m)</string>
    <string name="max_surface_gradient">Max. Surface Gradient (kV)</string>
    <string name="sub_conductors">Sub-Conductors</string>
    <string name="distance_m">Distance (m)</string>
    <string name="critical_disruptive_voltage">Critical Disruptive Voltage</string>
    <string name="optimal_height_to_spacing_ratio">Optimal Height to Spacing Ratio</string>
    <string name="hvdc_corona_loss">HVDC Corona Loss</string>
    <string name="dc_corona_loss">DC Corona Loss</string>
    <string name="calculate">Calculate</string>
    <string name="year_of_installation">Year of Installation</string>
    <string name="plot">Plot</string>
    <string name="base_start">: -</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="corona_power_loss_kw">Corona Power Loss (kW)</string>
    <string name="height_spacing">Height : Spacing</string>
    <string name="weather_labels">Pressure (cm Hg) / Temperature (°C)</string>
</resources>
