<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:layout_marginTop="4dp"
    android:background="@color/default_background"
    android:orientation="vertical"
    tools:ignore="Autofill">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/pressureEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/pressure_hint"
                        android:inputType="numberDecimal"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:text="76"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/voltageEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/operating_voltage"
                        android:inputType="numberDecimal"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:text="440"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/radiusEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/radius_cm"
                        android:inputType="numberDecimal"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:text="3.5"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/temperatureEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/temperature_hint"
                        android:inputType="numberDecimal"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:text="25"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/frequencyEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/frequency"
                        android:inputType="number"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:text="50"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/distanceEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/distance_m"
                        android:inputType="numberDecimal"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:text="1.2"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/yearsEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/year_of_installation"
                android:inputType="number"
                android:maxLength="30"
                android:maxLines="1"
                android:text="2015"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/weatherRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:id="@+id/fairRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fair_weather"
                android:textSize="20sp"
                android:textStyle="normal" />

            <RadioButton
                android:id="@+id/stormRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/storm_weather"
                android:textSize="20sp"
                android:textStyle="normal" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="2dp"
            android:text="@string/hvdc_corona_loss"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/meanHeightEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/mean_height"
                        android:inputType="number"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:text="10"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/poleSpacingEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/pole_spacing"
                        android:inputType="number"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:text="100"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/maxSurfaceGradientEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/max_surface_gradient"
                        android:inputType="numberDecimal"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:text="23"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/noOfSubConductorsEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/sub_conductors"
                        android:inputType="number"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:text="3"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/critical_disruptive_voltage"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/criticalVoltagetextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/no_value"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/visual_disruptive_voltage"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/visualVoltageTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/no_value"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/maximum_radius_loss"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/maximumRadiusLossTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/no_value"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ac_corona_loss"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/acLossTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/no_value"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/optimal_height_to_spacing_ratio"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ratioTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/no_value"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/dc_corona_loss"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dcLossTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/no_value"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>